# napari-zelda

./: LICENSE  MANIFEST.in  README.html  README.md  mkdocs.yml  protocols_description.txt  protocols_history.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.napari/: DESCRIPTION.html  DESCRIPTION.md  config.yml
docs/: 3ch_DNA_Actin_Mitochondria-AF488.tif  3ch_DNA_Actin_Mitochondria-MitoTracker.tif  Clipboard_ZELDA_Plugin_install_in_napari.tif  index.md
napari_zelda/: __init__.py  _reader.py  main.py  napari_zelda.py  plugin.py  protocols_description.txt  protocols_dict.json  protocols_history.txt  zelda.py
napari_zelda/_tests/: test_dock_widget.py  test_function.py  test_reader.py  test_writer.py
