[metadata]
name = napari-zelda
version = 0.0.1
author = Rocco D'Antuono
author_email = rocco.dantuono@hotmail.it

license = BSD-3-Clause
description = ZELDA: a 3D Image Segmentation and Parent to Child relation plugin for microscopy image analysis in napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License


[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    napari-zelda = napari_zelda
