[metadata]
name = napari-zelda
version = 0.1.0
author = Rocco D'Antuono
author_email = rocco.dantuono@hotmail.it

license = BSD-3-Clause
description = ZELDA: a 3D Image Segmentation and Parent to Child relation plugin for microscopy image analysis in napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License


[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    magicgui
    matplotlib>=3.4.2
    json5>=0.9.5
    napari-plugin-engine>=0.1.4
    numpy
    pandas
    scikit-image>=0.18.1
    scipy>=1.6.3
    QtPy>=1.9.0


[options.entry_points]
napari.plugin =
    napari-zelda = napari_zelda
