[metadata]
name = napari-zelda
version = 0.1.1
author = Rocco D'Antuono, Giuseppina Pisignano
author_email = rocco.dantuono@hotmail.it
url= https://github.com/RoccoDAnt/napari-zelda
download_url= https://github.com/RoccoDAnt/napari-zelda/archive/refs/tags/v0.1.0.tar.gz
license = BSD-3-Clause
description = ZELDA: a 3D Image Segmentation and Parent-Child relation plugin for microscopy image analysis in napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Framework :: napari
    Topic :: Scientific/Engineering
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License


[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    magicgui
    matplotlib
    json5
    napari
    napari-plugin-engine>=0.1.4
    numpy
    pandas
    scikit-image
    scipy
    qtpy


[options.entry_points]
napari.plugin =
    napari-zelda = napari_zelda
